[package]
name = "overload"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", default-features = false, features = ["macros", "rt-multi-thread"] }
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
auto-launch = "0.5.0"

[build-dependencies]
static_vcruntime = "2.0.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 16
